# Voronoi-Path-Planning

./: README.md
Experiments/Exp 1/: CMakeCache.txt  MOCMASimple.cpp  Makefile  cmake_install.cmake  mocmaes  nola.h
Experiments/Exp 10/: run.m
Experiments/Exp 2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mocmaes.cpp  nola.h  start.h
Experiments/Exp 3/: CMakeCache.txt  Co_ordinates.txt  Dextrous.cpp  Makefile  cmake_install.cmake  mocmaes  mocmaes.cpp
Experiments/Exp 4/: a.out  main.cpp
Experiments/Exp 5/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake  opencv (copy).cpp  opencv.cpp
Experiments/Exp 6/: CMakeCache.txt  CMakeLists.txt  Makefile  a.cpp  b  b.cpp  cmake_install.cmake
Experiments/Exp 7/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  opencv.cpp  points.txt
Experiments/Exp 9/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dist.h  main.cpp
p5js/Exp1/: exp.js  index.js  package.json
p5js/Exp1/public/: index.html
p5js/Exp1/public/css/: style.css
p5js/Exp1/public/js/: livedisplay.js  pathscreen.js  pathscreen1.js
p5js/Exp1/public/paths/: path1.json  path10.json  path11.json  path12.json  path13.json  path14.json  path15.json  path16.json  path17.json  path2.json  (+86 more)
project/: CMakeLists.txt  Makefile  cmake_install.cmake  common.h  mocmaes  mocmaes.cpp  multiObjectiveFunction.cpp  nsga  nsga.cpp  results.csv  smsemoa  smsemoa.cpp  ssmocma  ssmocma.cpp
project/old/: CMakeCache.txt  Makefile  cluster.R  mocmaes  mocmaes.cpp  multiObjectiveFunction.cpp  results.csv
(+4 files in other folders)
